add styles, change content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header class="title">
       Bohemian Rhapsody
-      <h4>by Freddie Mercury</h4>
+      <h4>~by Freddie Mercury</h4>
     </header>
     <p>Mama, just killed a man
     <br>Put a gun against his head
