--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <br>Gotta leave you all behind and face the truth
     <br>Mama, ooh
     <br>I don't want to die
-    <br>I sometimes wish I'd never been born at all</p>
+    <br>I sometimes wish I'd never been born at all
+    <br><br><span>The song was written in 1975</span>
+    </p>
 
   </div>
 
